@@ -1,9 +1,10 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.5-2
-29-01-2023	Import and modify in accordance with Rdpack
+31-01-2023	Rename SNP functions
 		Reorganize DESCRIPTION, adding Roxygen: list(markdown = TRUE), and document in Markdown
-		Revise gap.Rmd
+		Import and modify in accordance with Rdpack
+		Refine gap.Rmd
 
 Version 1.5-1
 22-01-2023	Add rationale, @graham21 and @vosa21 for cs() together with minor changes in gap.Rmd
